--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.10",
-    "jest": "^27.3.1",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
