--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
     "@types/helmet": "^4.0.0",
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
@@ -47,6 +48,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
