--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "tsc -w",
     "start:dev": "nodemon --exec ts-node ./src/index.ts",
     "start:prod": "nodemon ./dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -31,14 +32,18 @@
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
     "@types/helmet": "^4.0.0",
+    "@types/jasmine": "^3.10.2",
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.10",
     "@types/supertest": "^2.0.11",
+    "jasmine": "^3.10.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "jasmine-ts": "^0.4.0",
     "jest": "^27.4.3",
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^27.1.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   },
