--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.10",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "jest": "^27.4.3",
     "nodemon": "^2.0.15",
@@ -53,6 +54,7 @@
     "express-validator": "^6.13.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41"
